# serializer version: 1
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down
  '''
  SELECT "markettor_user"."id",
         "markettor_user"."password",
         "markettor_user"."last_login",
         "markettor_user"."first_name",
         "markettor_user"."last_name",
         "markettor_user"."is_staff",
         "markettor_user"."is_active",
         "markettor_user"."date_joined",
         "markettor_user"."uuid",
         "markettor_user"."current_organization_id",
         "markettor_user"."current_team_id",
         "markettor_user"."email",
         "markettor_user"."pending_email",
         "markettor_user"."temporary_token",
         "markettor_user"."distinct_id",
         "markettor_user"."is_email_verified",
         "markettor_user"."has_seen_product_intro_for",
         "markettor_user"."strapi_id",
         "markettor_user"."theme_mode",
         "markettor_user"."partial_notification_settings",
         "markettor_user"."anonymize_data",
         "markettor_user"."toolbar_mode",
         "markettor_user"."hedgehog_config",
         "markettor_user"."events_column_config",
         "markettor_user"."email_opt_in"
  FROM "markettor_user"
  WHERE "markettor_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.1
  '''
  SELECT "markettor_organizationmembership"."id",
         "markettor_organizationmembership"."organization_id",
         "markettor_organizationmembership"."user_id",
         "markettor_organizationmembership"."level",
         "markettor_organizationmembership"."joined_at",
         "markettor_organizationmembership"."updated_at",
         "markettor_organization"."id",
         "markettor_organization"."name",
         "markettor_organization"."slug",
         "markettor_organization"."logo_media_id",
         "markettor_organization"."created_at",
         "markettor_organization"."updated_at",
         "markettor_organization"."plugins_access_level",
         "markettor_organization"."for_internal_metrics",
         "markettor_organization"."is_member_join_email_enabled",
         "markettor_organization"."enforce_2fa",
         "markettor_organization"."is_hipaa",
         "markettor_organization"."customer_id",
         "markettor_organization"."available_product_features",
         "markettor_organization"."usage",
         "markettor_organization"."never_drop_data",
         "markettor_organization"."customer_trust_scores",
         "markettor_organization"."setup_section_2_completed",
         "markettor_organization"."personalization",
         "markettor_organization"."domain_whitelist"
  FROM "markettor_organizationmembership"
  INNER JOIN "markettor_organization" ON ("markettor_organizationmembership"."organization_id" = "markettor_organization"."id")
  WHERE "markettor_organizationmembership"."user_id" = 2
  '''
# ---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.10
  '''
  SELECT "markettor_hogfunction"."id",
         "markettor_hogfunction"."team_id",
         "markettor_hogfunction"."name",
         "markettor_hogfunction"."description",
         "markettor_hogfunction"."created_at",
         "markettor_hogfunction"."created_by_id",
         "markettor_hogfunction"."deleted",
         "markettor_hogfunction"."updated_at",
         "markettor_hogfunction"."enabled",
         "markettor_hogfunction"."icon_url",
         "markettor_hogfunction"."hog",
         "markettor_hogfunction"."bytecode",
         "markettor_hogfunction"."inputs_schema",
         "markettor_hogfunction"."inputs",
         "markettor_hogfunction"."encrypted_inputs",
         "markettor_hogfunction"."filters",
         "markettor_hogfunction"."masking",
         "markettor_hogfunction"."template_id",
         "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."plugins_opt_in",
         "markettor_team"."opt_out_capture",
         "markettor_team"."event_names",
         "markettor_team"."event_names_with_usage",
         "markettor_team"."event_properties",
         "markettor_team"."event_properties_with_usage",
         "markettor_team"."event_properties_numerical",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_hogfunction"
  INNER JOIN "markettor_team" ON ("markettor_hogfunction"."team_id" = "markettor_team"."id")
  WHERE ("markettor_hogfunction"."team_id" = 2
         AND "markettor_hogfunction"."filters" @> '{"filter_test_accounts": true}'::jsonb)
  '''
# ---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.11
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE ("markettor_team"."project_id" = 2
         AND "markettor_team"."id" = 2)
  LIMIT 21
  '''
# ---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.12
  '''
  SELECT 1 AS "a"
  FROM "markettor_grouptypemapping"
  WHERE "markettor_grouptypemapping"."team_id" = 2
  LIMIT 1
  '''
# ---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.13
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE ("markettor_team"."project_id" = 2
         AND "markettor_team"."id" = 2)
  LIMIT 21
  '''
# ---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.14
  '''
  SELECT "markettor_user"."id",
         "markettor_user"."password",
         "markettor_user"."last_login",
         "markettor_user"."first_name",
         "markettor_user"."last_name",
         "markettor_user"."is_staff",
         "markettor_user"."is_active",
         "markettor_user"."date_joined",
         "markettor_user"."uuid",
         "markettor_user"."current_organization_id",
         "markettor_user"."current_team_id",
         "markettor_user"."email",
         "markettor_user"."pending_email",
         "markettor_user"."temporary_token",
         "markettor_user"."distinct_id",
         "markettor_user"."is_email_verified",
         "markettor_user"."has_seen_product_intro_for",
         "markettor_user"."strapi_id",
         "markettor_user"."theme_mode",
         "markettor_user"."partial_notification_settings",
         "markettor_user"."anonymize_data",
         "markettor_user"."toolbar_mode",
         "markettor_user"."hedgehog_config",
         "markettor_user"."events_column_config",
         "markettor_user"."email_opt_in"
  FROM "markettor_user"
  WHERE "markettor_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.15
  '''
  SELECT "markettor_featureflag"."id",
         "markettor_featureflag"."key",
         "markettor_featureflag"."name",
         "markettor_featureflag"."filters",
         "markettor_featureflag"."rollout_percentage",
         "markettor_featureflag"."team_id",
         "markettor_featureflag"."created_by_id",
         "markettor_featureflag"."created_at",
         "markettor_featureflag"."deleted",
         "markettor_featureflag"."active",
         "markettor_featureflag"."rollback_conditions",
         "markettor_featureflag"."performed_rollback",
         "markettor_featureflag"."ensure_experience_continuity",
         "markettor_featureflag"."usage_dashboard_id",
         "markettor_featureflag"."has_enriched_analytics"
  FROM "markettor_featureflag"
  WHERE ("markettor_featureflag"."active"
         AND NOT "markettor_featureflag"."deleted"
         AND "markettor_featureflag"."team_id" = 2)
  '''
# ---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.16
  '''
  SELECT "markettor_pluginconfig"."id",
         "markettor_pluginconfig"."web_token",
         "markettor_pluginsourcefile"."updated_at",
         "markettor_plugin"."updated_at",
         "markettor_pluginconfig"."updated_at"
  FROM "markettor_pluginconfig"
  INNER JOIN "markettor_plugin" ON ("markettor_pluginconfig"."plugin_id" = "markettor_plugin"."id")
  INNER JOIN "markettor_pluginsourcefile" ON ("markettor_plugin"."id" = "markettor_pluginsourcefile"."plugin_id")
  WHERE ("markettor_pluginconfig"."enabled"
         AND "markettor_pluginsourcefile"."filename" = 'site.ts'
         AND "markettor_pluginsourcefile"."status" = 'TRANSPILED'
         AND "markettor_pluginconfig"."team_id" = 2)
  '''
# ---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.2
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."organization_id",
         "markettor_team"."access_control"
  FROM "markettor_team"
  WHERE "markettor_team"."organization_id" IN ('00000000-0000-0000-0000-000000000000'::uuid)
  '''
# ---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.3
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."plugins_opt_in",
         "markettor_team"."opt_out_capture",
         "markettor_team"."event_names",
         "markettor_team"."event_names_with_usage",
         "markettor_team"."event_properties",
         "markettor_team"."event_properties_with_usage",
         "markettor_team"."event_properties_numerical",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE "markettor_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.4
  '''
  SELECT "markettor_project"."id",
         "markettor_project"."organization_id",
         "markettor_project"."name",
         "markettor_project"."created_at"
  FROM "markettor_project"
  WHERE "markettor_project"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.5
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE ("markettor_team"."project_id" = 2
         AND "markettor_team"."id" = 2)
  LIMIT 21
  '''
# ---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.6
  '''
  SELECT "markettor_organizationmembership"."id",
         "markettor_organizationmembership"."organization_id",
         "markettor_organizationmembership"."user_id",
         "markettor_organizationmembership"."level",
         "markettor_organizationmembership"."joined_at",
         "markettor_organizationmembership"."updated_at",
         "markettor_organization"."id",
         "markettor_organization"."name",
         "markettor_organization"."slug",
         "markettor_organization"."logo_media_id",
         "markettor_organization"."created_at",
         "markettor_organization"."updated_at",
         "markettor_organization"."plugins_access_level",
         "markettor_organization"."for_internal_metrics",
         "markettor_organization"."is_member_join_email_enabled",
         "markettor_organization"."enforce_2fa",
         "markettor_organization"."is_hipaa",
         "markettor_organization"."customer_id",
         "markettor_organization"."available_product_features",
         "markettor_organization"."usage",
         "markettor_organization"."never_drop_data",
         "markettor_organization"."customer_trust_scores",
         "markettor_organization"."setup_section_2_completed",
         "markettor_organization"."personalization",
         "markettor_organization"."domain_whitelist"
  FROM "markettor_organizationmembership"
  INNER JOIN "markettor_organization" ON ("markettor_organizationmembership"."organization_id" = "markettor_organization"."id")
  WHERE "markettor_organizationmembership"."user_id" = 2
  '''
# ---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.7
  '''
  SELECT "markettor_organizationmembership"."id",
         "markettor_organizationmembership"."organization_id",
         "markettor_organizationmembership"."user_id",
         "markettor_organizationmembership"."level",
         "markettor_organizationmembership"."joined_at",
         "markettor_organizationmembership"."updated_at",
         "markettor_organization"."id",
         "markettor_organization"."name",
         "markettor_organization"."slug",
         "markettor_organization"."logo_media_id",
         "markettor_organization"."created_at",
         "markettor_organization"."updated_at",
         "markettor_organization"."plugins_access_level",
         "markettor_organization"."for_internal_metrics",
         "markettor_organization"."is_member_join_email_enabled",
         "markettor_organization"."enforce_2fa",
         "markettor_organization"."is_hipaa",
         "markettor_organization"."customer_id",
         "markettor_organization"."available_product_features",
         "markettor_organization"."usage",
         "markettor_organization"."never_drop_data",
         "markettor_organization"."customer_trust_scores",
         "markettor_organization"."setup_section_2_completed",
         "markettor_organization"."personalization",
         "markettor_organization"."domain_whitelist"
  FROM "markettor_organizationmembership"
  INNER JOIN "markettor_organization" ON ("markettor_organizationmembership"."organization_id" = "markettor_organization"."id")
  WHERE "markettor_organizationmembership"."user_id" = 2
  '''
# ---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.8
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."organization_id",
         "markettor_team"."access_control"
  FROM "markettor_team"
  WHERE "markettor_team"."organization_id" IN ('00000000-0000-0000-0000-000000000000'::uuid)
  '''
# ---
# name: TestDecide.test_decide_doesnt_error_out_when_database_is_down.9
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE ("markettor_team"."project_id" = 2
         AND "markettor_team"."id" = 2)
  LIMIT 21
  '''
# ---
# name: TestDecide.test_flag_with_behavioural_cohorts
  '''
  SELECT "markettor_hogfunction"."id",
         "markettor_hogfunction"."team_id",
         "markettor_hogfunction"."name",
         "markettor_hogfunction"."description",
         "markettor_hogfunction"."created_at",
         "markettor_hogfunction"."created_by_id",
         "markettor_hogfunction"."deleted",
         "markettor_hogfunction"."updated_at",
         "markettor_hogfunction"."enabled",
         "markettor_hogfunction"."icon_url",
         "markettor_hogfunction"."hog",
         "markettor_hogfunction"."bytecode",
         "markettor_hogfunction"."inputs_schema",
         "markettor_hogfunction"."inputs",
         "markettor_hogfunction"."encrypted_inputs",
         "markettor_hogfunction"."filters",
         "markettor_hogfunction"."masking",
         "markettor_hogfunction"."template_id",
         "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."plugins_opt_in",
         "markettor_team"."opt_out_capture",
         "markettor_team"."event_names",
         "markettor_team"."event_names_with_usage",
         "markettor_team"."event_properties",
         "markettor_team"."event_properties_with_usage",
         "markettor_team"."event_properties_numerical",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_hogfunction"
  INNER JOIN "markettor_team" ON ("markettor_hogfunction"."team_id" = "markettor_team"."id")
  WHERE ("markettor_hogfunction"."team_id" = 2
         AND "markettor_hogfunction"."filters" @> '{"filter_test_accounts": true}'::jsonb)
  '''
# ---
# name: TestDecide.test_flag_with_behavioural_cohorts.1
  '''
  SELECT "markettor_user"."id",
         "markettor_user"."password",
         "markettor_user"."last_login",
         "markettor_user"."first_name",
         "markettor_user"."last_name",
         "markettor_user"."is_staff",
         "markettor_user"."is_active",
         "markettor_user"."date_joined",
         "markettor_user"."uuid",
         "markettor_user"."current_organization_id",
         "markettor_user"."current_team_id",
         "markettor_user"."email",
         "markettor_user"."pending_email",
         "markettor_user"."temporary_token",
         "markettor_user"."distinct_id",
         "markettor_user"."is_email_verified",
         "markettor_user"."has_seen_product_intro_for",
         "markettor_user"."strapi_id",
         "markettor_user"."theme_mode",
         "markettor_user"."partial_notification_settings",
         "markettor_user"."anonymize_data",
         "markettor_user"."toolbar_mode",
         "markettor_user"."hedgehog_config",
         "markettor_user"."events_column_config",
         "markettor_user"."email_opt_in"
  FROM "markettor_user"
  WHERE "markettor_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestDecide.test_flag_with_behavioural_cohorts.2
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."plugins_opt_in",
         "markettor_team"."opt_out_capture",
         "markettor_team"."event_names",
         "markettor_team"."event_names_with_usage",
         "markettor_team"."event_properties",
         "markettor_team"."event_properties_with_usage",
         "markettor_team"."event_properties_numerical",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE "markettor_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestDecide.test_flag_with_behavioural_cohorts.3
  '''
  SELECT "markettor_featureflag"."id",
         "markettor_featureflag"."key",
         "markettor_featureflag"."name",
         "markettor_featureflag"."filters",
         "markettor_featureflag"."rollout_percentage",
         "markettor_featureflag"."team_id",
         "markettor_featureflag"."created_by_id",
         "markettor_featureflag"."created_at",
         "markettor_featureflag"."deleted",
         "markettor_featureflag"."active",
         "markettor_featureflag"."rollback_conditions",
         "markettor_featureflag"."performed_rollback",
         "markettor_featureflag"."ensure_experience_continuity",
         "markettor_featureflag"."usage_dashboard_id",
         "markettor_featureflag"."has_enriched_analytics"
  FROM "markettor_featureflag"
  WHERE ("markettor_featureflag"."active"
         AND NOT "markettor_featureflag"."deleted"
         AND "markettor_featureflag"."team_id" = 2)
  '''
# ---
# name: TestDecide.test_flag_with_behavioural_cohorts.4
  '''
  SELECT "markettor_cohort"."id",
         "markettor_cohort"."name",
         "markettor_cohort"."description",
         "markettor_cohort"."team_id",
         "markettor_cohort"."deleted",
         "markettor_cohort"."filters",
         "markettor_cohort"."query",
         "markettor_cohort"."version",
         "markettor_cohort"."pending_version",
         "markettor_cohort"."count",
         "markettor_cohort"."created_by_id",
         "markettor_cohort"."created_at",
         "markettor_cohort"."is_calculating",
         "markettor_cohort"."last_calculation",
         "markettor_cohort"."errors_calculating",
         "markettor_cohort"."is_static",
         "markettor_cohort"."groups"
  FROM "markettor_cohort"
  WHERE (NOT "markettor_cohort"."deleted"
         AND "markettor_cohort"."team_id" = 2)
  '''
# ---
# name: TestDecide.test_flag_with_behavioural_cohorts.5
  '''
  SELECT "markettor_cohort"."id",
         "markettor_cohort"."name",
         "markettor_cohort"."description",
         "markettor_cohort"."team_id",
         "markettor_cohort"."deleted",
         "markettor_cohort"."filters",
         "markettor_cohort"."query",
         "markettor_cohort"."version",
         "markettor_cohort"."pending_version",
         "markettor_cohort"."count",
         "markettor_cohort"."created_by_id",
         "markettor_cohort"."created_at",
         "markettor_cohort"."is_calculating",
         "markettor_cohort"."last_calculation",
         "markettor_cohort"."errors_calculating",
         "markettor_cohort"."is_static",
         "markettor_cohort"."groups"
  FROM "markettor_cohort"
  WHERE (NOT "markettor_cohort"."deleted"
         AND "markettor_cohort"."team_id" = 2)
  '''
# ---
# name: TestDecide.test_flag_with_regular_cohorts
  '''
  SELECT "markettor_hogfunction"."id",
         "markettor_hogfunction"."team_id",
         "markettor_hogfunction"."name",
         "markettor_hogfunction"."description",
         "markettor_hogfunction"."created_at",
         "markettor_hogfunction"."created_by_id",
         "markettor_hogfunction"."deleted",
         "markettor_hogfunction"."updated_at",
         "markettor_hogfunction"."enabled",
         "markettor_hogfunction"."icon_url",
         "markettor_hogfunction"."hog",
         "markettor_hogfunction"."bytecode",
         "markettor_hogfunction"."inputs_schema",
         "markettor_hogfunction"."inputs",
         "markettor_hogfunction"."encrypted_inputs",
         "markettor_hogfunction"."filters",
         "markettor_hogfunction"."masking",
         "markettor_hogfunction"."template_id",
         "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."plugins_opt_in",
         "markettor_team"."opt_out_capture",
         "markettor_team"."event_names",
         "markettor_team"."event_names_with_usage",
         "markettor_team"."event_properties",
         "markettor_team"."event_properties_with_usage",
         "markettor_team"."event_properties_numerical",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_hogfunction"
  INNER JOIN "markettor_team" ON ("markettor_hogfunction"."team_id" = "markettor_team"."id")
  WHERE ("markettor_hogfunction"."team_id" = 2
         AND "markettor_hogfunction"."filters" @> '{"filter_test_accounts": true}'::jsonb)
  '''
# ---
# name: TestDecide.test_flag_with_regular_cohorts.1
  '''
  SELECT "markettor_user"."id",
         "markettor_user"."password",
         "markettor_user"."last_login",
         "markettor_user"."first_name",
         "markettor_user"."last_name",
         "markettor_user"."is_staff",
         "markettor_user"."is_active",
         "markettor_user"."date_joined",
         "markettor_user"."uuid",
         "markettor_user"."current_organization_id",
         "markettor_user"."current_team_id",
         "markettor_user"."email",
         "markettor_user"."pending_email",
         "markettor_user"."temporary_token",
         "markettor_user"."distinct_id",
         "markettor_user"."is_email_verified",
         "markettor_user"."has_seen_product_intro_for",
         "markettor_user"."strapi_id",
         "markettor_user"."theme_mode",
         "markettor_user"."partial_notification_settings",
         "markettor_user"."anonymize_data",
         "markettor_user"."toolbar_mode",
         "markettor_user"."hedgehog_config",
         "markettor_user"."events_column_config",
         "markettor_user"."email_opt_in"
  FROM "markettor_user"
  WHERE "markettor_user"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestDecide.test_flag_with_regular_cohorts.2
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."plugins_opt_in",
         "markettor_team"."opt_out_capture",
         "markettor_team"."event_names",
         "markettor_team"."event_names_with_usage",
         "markettor_team"."event_properties",
         "markettor_team"."event_properties_with_usage",
         "markettor_team"."event_properties_numerical",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE "markettor_team"."id" = 2
  LIMIT 21
  '''
# ---
# name: TestDecide.test_flag_with_regular_cohorts.3
  '''
  SELECT "markettor_featureflag"."id",
         "markettor_featureflag"."key",
         "markettor_featureflag"."name",
         "markettor_featureflag"."filters",
         "markettor_featureflag"."rollout_percentage",
         "markettor_featureflag"."team_id",
         "markettor_featureflag"."created_by_id",
         "markettor_featureflag"."created_at",
         "markettor_featureflag"."deleted",
         "markettor_featureflag"."active",
         "markettor_featureflag"."rollback_conditions",
         "markettor_featureflag"."performed_rollback",
         "markettor_featureflag"."ensure_experience_continuity",
         "markettor_featureflag"."usage_dashboard_id",
         "markettor_featureflag"."has_enriched_analytics"
  FROM "markettor_featureflag"
  WHERE ("markettor_featureflag"."active"
         AND NOT "markettor_featureflag"."deleted"
         AND "markettor_featureflag"."team_id" = 2)
  '''
# ---
# name: TestDecide.test_flag_with_regular_cohorts.4
  '''
  SELECT "markettor_cohort"."id",
         "markettor_cohort"."name",
         "markettor_cohort"."description",
         "markettor_cohort"."team_id",
         "markettor_cohort"."deleted",
         "markettor_cohort"."filters",
         "markettor_cohort"."query",
         "markettor_cohort"."version",
         "markettor_cohort"."pending_version",
         "markettor_cohort"."count",
         "markettor_cohort"."created_by_id",
         "markettor_cohort"."created_at",
         "markettor_cohort"."is_calculating",
         "markettor_cohort"."last_calculation",
         "markettor_cohort"."errors_calculating",
         "markettor_cohort"."is_static",
         "markettor_cohort"."groups"
  FROM "markettor_cohort"
  WHERE (NOT "markettor_cohort"."deleted"
         AND "markettor_cohort"."team_id" = 2)
  '''
# ---
# name: TestDecide.test_flag_with_regular_cohorts.5
  '''
  SELECT (("markettor_person"."properties" -> '$some_prop_1') = '"something_1"'::jsonb
          AND "markettor_person"."properties" ? '$some_prop_1'
          AND NOT (("markettor_person"."properties" -> '$some_prop_1') = 'null'::jsonb)) AS "flag_X_condition_0"
  FROM "markettor_person"
  INNER JOIN "markettor_persondistinctid" ON ("markettor_person"."id" = "markettor_persondistinctid"."person_id")
  WHERE ("markettor_persondistinctid"."distinct_id" = 'example_id_1'
         AND "markettor_persondistinctid"."team_id" = 2
         AND "markettor_person"."team_id" = 2)
  '''
# ---
# name: TestDecide.test_flag_with_regular_cohorts.6
  '''
  SELECT "markettor_cohort"."id",
         "markettor_cohort"."name",
         "markettor_cohort"."description",
         "markettor_cohort"."team_id",
         "markettor_cohort"."deleted",
         "markettor_cohort"."filters",
         "markettor_cohort"."query",
         "markettor_cohort"."version",
         "markettor_cohort"."pending_version",
         "markettor_cohort"."count",
         "markettor_cohort"."created_by_id",
         "markettor_cohort"."created_at",
         "markettor_cohort"."is_calculating",
         "markettor_cohort"."last_calculation",
         "markettor_cohort"."errors_calculating",
         "markettor_cohort"."is_static",
         "markettor_cohort"."groups"
  FROM "markettor_cohort"
  WHERE (NOT "markettor_cohort"."deleted"
         AND "markettor_cohort"."team_id" = 2)
  '''
# ---
# name: TestDecide.test_flag_with_regular_cohorts.7
  '''
  SELECT (("markettor_person"."properties" -> '$some_prop_1') = '"something_1"'::jsonb
          AND "markettor_person"."properties" ? '$some_prop_1'
          AND NOT (("markettor_person"."properties" -> '$some_prop_1') = 'null'::jsonb)) AS "flag_X_condition_0"
  FROM "markettor_person"
  INNER JOIN "markettor_persondistinctid" ON ("markettor_person"."id" = "markettor_persondistinctid"."person_id")
  WHERE ("markettor_persondistinctid"."distinct_id" = 'another_id'
         AND "markettor_persondistinctid"."team_id" = 2
         AND "markettor_person"."team_id" = 2)
  '''
# ---
# name: TestDecide.test_web_app_queries
  '''
  SELECT "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_team"
  WHERE "markettor_team"."api_token" = 'token123'
  LIMIT 21
  '''
# ---
# name: TestDecide.test_web_app_queries.1
  '''
  SELECT "markettor_featureflag"."id",
         "markettor_featureflag"."key",
         "markettor_featureflag"."name",
         "markettor_featureflag"."filters",
         "markettor_featureflag"."rollout_percentage",
         "markettor_featureflag"."team_id",
         "markettor_featureflag"."created_by_id",
         "markettor_featureflag"."created_at",
         "markettor_featureflag"."deleted",
         "markettor_featureflag"."active",
         "markettor_featureflag"."rollback_conditions",
         "markettor_featureflag"."performed_rollback",
         "markettor_featureflag"."ensure_experience_continuity",
         "markettor_featureflag"."usage_dashboard_id",
         "markettor_featureflag"."has_enriched_analytics"
  FROM "markettor_featureflag"
  WHERE ("markettor_featureflag"."active"
         AND NOT "markettor_featureflag"."deleted"
         AND "markettor_featureflag"."team_id" = 2)
  '''
# ---
# name: TestDecide.test_web_app_queries.2
  '''
  SELECT "markettor_pluginconfig"."id",
         "markettor_pluginconfig"."web_token",
         "markettor_pluginsourcefile"."updated_at",
         "markettor_plugin"."updated_at",
         "markettor_pluginconfig"."updated_at"
  FROM "markettor_pluginconfig"
  INNER JOIN "markettor_plugin" ON ("markettor_pluginconfig"."plugin_id" = "markettor_plugin"."id")
  INNER JOIN "markettor_pluginsourcefile" ON ("markettor_plugin"."id" = "markettor_pluginsourcefile"."plugin_id")
  WHERE ("markettor_pluginconfig"."enabled"
         AND "markettor_pluginsourcefile"."filename" = 'site.ts'
         AND "markettor_pluginsourcefile"."status" = 'TRANSPILED'
         AND "markettor_pluginconfig"."team_id" = 2)
  '''
# ---
# name: TestDecide.test_web_app_queries.3
  '''
  SELECT "markettor_hogfunction"."id",
         "markettor_hogfunction"."team_id",
         "markettor_hogfunction"."name",
         "markettor_hogfunction"."description",
         "markettor_hogfunction"."created_at",
         "markettor_hogfunction"."created_by_id",
         "markettor_hogfunction"."deleted",
         "markettor_hogfunction"."updated_at",
         "markettor_hogfunction"."enabled",
         "markettor_hogfunction"."icon_url",
         "markettor_hogfunction"."hog",
         "markettor_hogfunction"."bytecode",
         "markettor_hogfunction"."inputs_schema",
         "markettor_hogfunction"."inputs",
         "markettor_hogfunction"."encrypted_inputs",
         "markettor_hogfunction"."filters",
         "markettor_hogfunction"."masking",
         "markettor_hogfunction"."template_id",
         "markettor_team"."id",
         "markettor_team"."uuid",
         "markettor_team"."organization_id",
         "markettor_team"."project_id",
         "markettor_team"."api_token",
         "markettor_team"."app_urls",
         "markettor_team"."name",
         "markettor_team"."slack_incoming_webhook",
         "markettor_team"."created_at",
         "markettor_team"."updated_at",
         "markettor_team"."anonymize_ips",
         "markettor_team"."completed_snippet_onboarding",
         "markettor_team"."has_completed_onboarding_for",
         "markettor_team"."ingested_event",
         "markettor_team"."autocapture_opt_out",
         "markettor_team"."autocapture_web_vitals_opt_in",
         "markettor_team"."autocapture_web_vitals_allowed_metrics",
         "markettor_team"."autocapture_exceptions_opt_in",
         "markettor_team"."autocapture_exceptions_errors_to_ignore",
         "markettor_team"."session_recording_opt_in",
         "markettor_team"."session_recording_sample_rate",
         "markettor_team"."session_recording_minimum_duration_milliseconds",
         "markettor_team"."session_recording_linked_flag",
         "markettor_team"."session_recording_network_payload_capture_config",
         "markettor_team"."session_replay_config",
         "markettor_team"."capture_console_log_opt_in",
         "markettor_team"."capture_performance_opt_in",
         "markettor_team"."surveys_opt_in",
         "markettor_team"."heatmaps_opt_in",
         "markettor_team"."session_recording_version",
         "markettor_team"."signup_token",
         "markettor_team"."is_demo",
         "markettor_team"."access_control",
         "markettor_team"."week_start_day",
         "markettor_team"."inject_web_apps",
         "markettor_team"."test_account_filters",
         "markettor_team"."test_account_filters_default_checked",
         "markettor_team"."path_cleaning_filters",
         "markettor_team"."timezone",
         "markettor_team"."data_attributes",
         "markettor_team"."person_display_name_properties",
         "markettor_team"."live_events_columns",
         "markettor_team"."recording_domains",
         "markettor_team"."primary_dashboard_id",
         "markettor_team"."extra_settings",
         "markettor_team"."modifiers",
         "markettor_team"."correlation_config",
         "markettor_team"."session_recording_retention_period_days",
         "markettor_team"."plugins_opt_in",
         "markettor_team"."opt_out_capture",
         "markettor_team"."event_names",
         "markettor_team"."event_names_with_usage",
         "markettor_team"."event_properties",
         "markettor_team"."event_properties_with_usage",
         "markettor_team"."event_properties_numerical",
         "markettor_team"."external_data_workspace_id",
         "markettor_team"."external_data_workspace_last_synced_at"
  FROM "markettor_hogfunction"
  INNER JOIN "markettor_team" ON ("markettor_hogfunction"."team_id" = "markettor_team"."id")
  WHERE ("markettor_hogfunction"."team_id" = 2
         AND "markettor_hogfunction"."filters" @> '{"filter_test_accounts": true}'::jsonb)
  '''
# ---
# name: TestDecide.test_web_app_queries.4
  '''
  SELECT "markettor_pluginconfig"."id",
         "markettor_pluginconfig"."web_token",
         "markettor_pluginsourcefile"."updated_at",
         "markettor_plugin"."updated_at",
         "markettor_pluginconfig"."updated_at"
  FROM "markettor_pluginconfig"
  INNER JOIN "markettor_plugin" ON ("markettor_pluginconfig"."plugin_id" = "markettor_plugin"."id")
  INNER JOIN "markettor_pluginsourcefile" ON ("markettor_plugin"."id" = "markettor_pluginsourcefile"."plugin_id")
  WHERE ("markettor_pluginconfig"."enabled"
         AND "markettor_pluginsourcefile"."filename" = 'site.ts'
         AND "markettor_pluginsourcefile"."status" = 'TRANSPILED'
         AND "markettor_pluginconfig"."team_id" = 2)
  '''
# ---
# name: TestDecide.test_web_app_queries.5
  '''
  SELECT "markettor_pluginconfig"."id",
         "markettor_pluginconfig"."web_token",
         "markettor_pluginsourcefile"."updated_at",
         "markettor_plugin"."updated_at",
         "markettor_pluginconfig"."updated_at"
  FROM "markettor_pluginconfig"
  INNER JOIN "markettor_plugin" ON ("markettor_pluginconfig"."plugin_id" = "markettor_plugin"."id")
  INNER JOIN "markettor_pluginsourcefile" ON ("markettor_plugin"."id" = "markettor_pluginsourcefile"."plugin_id")
  WHERE ("markettor_pluginconfig"."enabled"
         AND "markettor_pluginsourcefile"."filename" = 'site.ts'
         AND "markettor_pluginsourcefile"."status" = 'TRANSPILED'
         AND "markettor_pluginconfig"."team_id" = 2)
  '''
# ---
